Consignas de la activdad 1a-Cedsa

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Actividad1-CEDSA</title>
+  <link rel="stylesheet" type="text/css" href="Css/Estilo.css" />
 </head>
 <body>
   <!-- Título de la página -->
@@ -12,9 +13,9 @@
   <p>
     Soy docente de matematicas. Me gusta aprender cosas nuevas y compartir el conocimiento con estudiantes. Me interesan la programación y robótica.
   </p>
-  
+
   <!-- Link a Google Argentina -->
-  <a href="https://www.google.com.ar" target="_blank">Ir a Google Argentina</a>
+  <a href="https://www.google.com.ar" target="_blank">Ir a Google Argentina</a> 
   
   <!-- Lista de actividades favoritas (desordenada) -->
   <ul>
@@ -26,7 +27,7 @@
     <li>Jugar con la pc</li>
 </ul>
   
-  <!-- Imagen que te guste -->
+  <!-- la Imagen que me gusta -->
   <img src="Media/Aliance.png" alt="Naturaleza" width="400">
   
   <!-- Tabla simple -->
