--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Actividad1-CEDSA</title>
-  <link rel="stylesheet" type="text/css" href="Css/Estilo.css" />
+  <title>Adrian Fernandez</title>
+  <link rel="stylesheet" type="text/css" href="./Css/Estilo.css" />
 </head>
 <body>
   <!-- Título de la página -->
@@ -18,6 +18,9 @@
   <a href="https://www.google.com.ar" target="_blank">Ir a Google Argentina</a> 
   
   <!-- Lista de actividades favoritas (desordenada) -->
+  <h2>
+    Actividades favoritas
+  </h2>
   <ul>
     <li>Ir de pesca</li>
     <li>Jugar al futbol</li>
@@ -28,10 +31,10 @@
 </ul>
   
   <!-- la Imagen que me gusta -->
-  <img src="Media/Aliance.png" alt="Naturaleza" width="400">
+  <img src="./Media/Aliance.png" alt="Naturaleza" width="400">
   
   <!-- Tabla simple -->
-  <table border="1">
+  <table>
     <tr>
       <th>Actividad</th>
       <th>Frecuencia</th>
@@ -57,7 +60,7 @@
   <!-- Audio de la web -->
   <h2>Audio favorito</h2>
   <audio controls>
-    <source src="media/The Beloved - Sweet harmony.mp3" type="audio/mpeg">
+    <source src="./Media/The Beloved - Sweet harmony.mp3" type="audio/mpeg">
   </audio>
 </body>
 </html>
