poniendo un elemento flotante

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Adrian Fernandez</title>
   <link rel="stylesheet" type="text/css" href="./Css/Estilo.css" />
+  <script src="https://kit.fontawesome.com/10489d3424.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- Título de la página -->
@@ -62,5 +63,12 @@
   <audio controls>
     <source src="./Media/The Beloved - Sweet harmony.mp3" type="audio/mpeg">
   </audio>
+  <div>
+        <a href="https://www.uv.es/jac/guia/estilo2.htm#punto12" target="_blank"><i class="fa-brands fa-html5"></i></a>
+  </div>
+
+<footer>
+        <p>Este es el final de la página</p>
+</footer>
 </body>
 </html>
